tdf#91523 sw: fix navigation to index mark

Access pTextTox instead of pTextField in case of TEXTTOXMARK

Change-Id: I92ece6f4c5d6a6427f89cbd43a15a4b0a3adb645